[gd_scene load_steps=8 format=3 uid="uid://bnaxy3xkcgbcs"]

[ext_resource type="Script" uid="uid://n0hmfjxllma7" path="res://scripts/poolable_enemy.gd" id="1_pbv5l"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7k104"]

[sub_resource type="BoxMesh" id="BoxMesh_4gyqm"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7p1mj"]
size = Vector3(1, 3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_7k104"]
size = Vector3(0.32251, 0.974121, 0.356934)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7p1mj"]

[sub_resource type="CylinderMesh" id="CylinderMesh_md0e3"]

[node name="PoolableEnemy" type="CharacterBody3D"]
script = ExtResource("1_pbv5l")

[node name="EnemyMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_7k104")
mesh = SubResource("BoxMesh_4gyqm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_7p1mj")

[node name="Hitbox" type="Area3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("BoxShape3D_7k104")

[node name="HeadHitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.74307, 0)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="HeadHitbox"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_7p1mj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HeadHitbox"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_md0e3")
